; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_read_yesno.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_read_yesno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_yesno() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @getchar()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = call signext i8 @av_toupper(i32 %4)
  %6 = sext i8 %5 to i32
  %7 = icmp eq i32 %6, 89
  %8 = zext i1 %7 to i32
  store i32 %8, i32* %2, align 4
  br label %9

9:                                                ; preds = %18, %0
  %10 = load i32, i32* %1, align 4
  %11 = icmp ne i32 %10, 10
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = load i32, i32* %1, align 4
  %14 = load i32, i32* @EOF, align 4
  %15 = icmp ne i32 %13, %14
  br label %16

16:                                               ; preds = %12, %9
  %17 = phi i1 [ false, %9 ], [ %15, %12 ]
  br i1 %17, label %18, label %20

18:                                               ; preds = %16
  %19 = call i32 (...) @getchar()
  store i32 %19, i32* %1, align 4
  br label %9

20:                                               ; preds = %16
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @getchar(...) #1

declare dso_local signext i8 @av_toupper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
